# yolox

./: .gitignore  CLEANUP_SUMMARY.md  DEVICE_OPTIMIZATION.md  FIX_ENVIRONMENT.md  LICENSE  MPS_FIX_SUMMARY.md  README.md  REMOVE_GIT_HISTORY.md  SECURITY.md  convert_annotations_colab.py  convert_csv_to_coco.py  fix_dependencies.sh  pyproject.toml  requirements_fixed.txt  setup.py  test_coco_setup.py  test_image_formats.py  train_crater.py  train_crater_device_aware.py
.github/: PRE_COMMIT_CHECKLIST.md
docs/: conf.py
drive/MyDrive/YOLOX_weights/crater_yolox_s/: train_log.txt
exps/example/custom/: crater_yolox_s.py
weights/: README.md
yolox/core/: trainer.py
yolox/data/: __init__.py  data_augment.py  data_prefetcher_mps.py
yolox/data/datasets/: __init__.py  coco.py  crater.py  datasets_wrapper.py  mosaicdetection.py
yolox/evaluators/: __init__.py  coco_evaluator.py  crater_evaluator.py
yolox/exp/: base_exp.py  yolox_base.py
yolox/models/: losses.py  yolo_head.py
yolox/utils/: __init__.py  boxes.py  device.py  mps_patch.py
